# loomings

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
docs/: index.html  style.css
examples/: loomings.md
icons/loomings.icon/: icon.json
scripts/: build-icons.sh  pad-icon.swift
src/: editor.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
