[package]
name = "loomings"
version = "0.2.2"
description = "A minimalist Markdown writing app"
authors = ["Tiago Jacinto"]
license = "MIT"
edition = "2021"

[lib]
name = "loomings_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
notify = "7"
notify-debouncer-mini = "0.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
